syntax = "proto3";
package prismatics;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/gov/v1/gov.proto";
import "google/protobuf/any.proto";
import "prism/pgov/proposal.proto";

option go_package = "github.com/prism-finance/prismatics/types";

message AssetProposal {
  cosmos.gov.v1.Proposal orig_proposal = 1 [(gogoproto.nullable) = false];
  prism.pgov.Proposal prism_proposal = 2;
}
