syntax = "proto3";
package prismatics.server.pgov;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/gov/v1/gov.proto";
import "google/protobuf/any.proto";
import "prism/pgov/proposal.proto";
import "prismatics/pgov/pgov.proto";

option go_package = "github.com/prism-finance/prismatics/server/pgov";

message QueryAssetProposalRequest {
  string asset_id = 1;
  // FIXME add pagination
}

message QueryAssetProposalResponse {
  repeated prismatics.pgov.AssetProposal proposals = 1 [(gogoproto.nullable) = false];
}

message QuerySubmitProposalMsgsRequest {
  string asset_id = 1;
  uint64 proposal_id = 2;
}

message QuerySubmitProposalMsgsResponse {
  repeated google.protobuf.Any messages = 1;
}